--- a/Site Assets/css/style.css
+++ b/Site Assets/css/style.css
@@ -5,18 +5,17 @@ body {
 }
 
 #header	{
-	font-family: 'Lora', "Arial", "Times", "serif";
+	font-family: 'Lora', Arial, Times, serif;
 	font-size: 80px;
 	position: relative;
 	color: #FFFFFF;
     line-height: 200px;
-  	text-shadow:
-   	 -1px -1px 0 #000,  
-       1px -1px 0 #000,
-        -1px 1px 0 #000,
-          1px 1px 0 #000;
 }
 
+
+
+
+/* styles for the video and image frontpages (video, head, header) */
 #video_footer {
 	position:absolute;
 	top: 0;
@@ -24,7 +23,7 @@ body {
 	background-color: #2699FB;
 	width: 100%;
 	height: 100vh;
-	opacity: 0.60;
+	opacity: 0.6;
 }
 
 .head {
@@ -47,7 +46,6 @@ body {
 	justify-content: center;
 }
 
-
 .video_page {
 	width: 100%;	
 }
@@ -56,11 +54,12 @@ body {
 	width: 100%;
 	height: 100vh;
 }
+
 #video_header {
 	position: absolute;
 	text-align: center;
 	font-size: 35px;
-	font-family: 'Lora', "Arial", "Times", "serif";
+	font-family: 'Lora', Arial, Times, serif;
 	padding: 20px;
 	margin: 15px;
 	z-index: 1;
@@ -75,6 +74,10 @@ body {
 	font-size: 35px;
 }
 
+
+
+
+/* navigation styles (ul, li, li a) */
 ul {
     list-style-type: none;
     margin-left: auto;
@@ -96,7 +99,7 @@ li {
 }
 
 li a {
-	font-family: 'Lora', "Arial", "Times", "serif";
+	font-family: 'Lora', Arial, Times, serif;
 	color: #F5F5F5;
     text-transform: uppercase;
 	display: block;
@@ -109,13 +112,12 @@ li a:hover {
     background-color: #444444;
 }
 
-.home {
-	text-align: left;
-}
 
 
+
+/* style for main textblocks */
 .inhoud {
-    font-family: 'Lora', "Arial", "Times", "serif";
+    font-family: 'Lora', Arial, Times, serif;
     background-color: #F5F5F5;
     width: 50%;
     color: #707070;
@@ -139,9 +141,34 @@ p {
     display: block;
 }
 
+
+
+
+/* style for sportspage textblocks */
+.sport {
+    font-family: 'Lora', Arial, Times, serif;
+    background-color: #F5F5F5;
+	text-align: left;
+    width: 50%;
+    color: #707070;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 15p;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;	
+	border-radius: 25px;
+	border: 2px solid #2699FB;
+}
+
+
+
+
+/* style for img */
 img.afbeelding {
 	position: center;
-	margin-top: 0;
+	margin-top: 20px;
 	margin-bottom: 0;
 	margin-left: auto;
 	margin-right: auto;
@@ -153,20 +180,50 @@ img.afbeelding {
 	object-fit: cover;
 }
 
-.contactform {
-    width: 960px;
-    margin-top: 0;
-    margin-bottom: 0px;
-    margin-left: auto;
-    margin-right: auto;
-    overflow: hidden;
-    background-color: #FFFFFF;
 
+
+
+/* style for sportspage img with right float */
+img.afbeeldingSportRechts {
+	float: right;
+	margin-top: 0;
+	margin-bottom: 0;
+	margin-left: 20px;
+	margin-right: auto;
+	border-radius: 25px;
+	border: 2px solid #AAAAAA;
+	width: 50%;
+	padding: 0;
+	display: block;
+	object-fit: cover;	
 }
 
+
+
+
+/* style for sportspage img with left float */
+img.afbeeldingSportLinks {
+	float: left;
+	margin-top: 0;
+	margin-bottom: 0;
+	margin-left: auto;
+	margin-right: 20px;
+	border-radius: 25px;
+	border: 2px solid #AAAAAA;
+	width: 50%;
+	padding: 0;
+	display: block;
+	object-fit: cover;	
+}
+
+
+
+
+/* contact page styles */
 #info {
-    font-family: 'Lora', "Arial", "Times", "serif";
-    font-size: 1.5em;
+    font-family: 'Lora', Arial, Times, serif;
+    font-size: 15px;
+	text-align: center;
     padding-left: 20px;
     color: #707070;
 }
@@ -179,6 +236,8 @@ img.afbeelding {
     margin-right: auto;
     overflow: hidden;
     background-color: #F5F5F5;
+	border-radius: 25px;
+	border: 2px solid #2699FB;
 }
 
 fieldset {
@@ -196,7 +255,7 @@ fieldset {
 
 input[type=submit] {
     background-color: #2699FB;
-    font-family: 'Lora', "Arial", "Times", "serif";
+    font-family: 'Lora', Arial, Times, serif;
     font-size: 30px;
     color: #FFFFFF;
     width: 90%;
@@ -212,7 +271,7 @@ input, textarea {
     width: 97%;
     padding: 12px;  
     float: left;
-    font-family: 'Lora', "Arial", "Times", "serif";
+    font-family: 'Lora', Arial, Times, serif;
     color: #707070;
     resize: none;
     border: 0;
@@ -223,13 +282,13 @@ select {
     height: 40px;
     width: 525px;
     float: right;
-    font-family: 'Lora', "Arial", "Times", "serif";
+    font-family: 'Lora', Arial, Times, serif;
     color: #707070;
     font-size: 1.5em;
 }
 
 label {
-    font-family: 'Lora', "Arial", "Times", "serif";
+    font-family: 'Lora', Arial, Times, serif;
     color: #707070;
     font-size: 1.5em;
     padding-left: 10px;
@@ -237,18 +296,53 @@ label {
 }
 
 .contactFormFieldset input, textarea {
-    font-family: 'Lora', "Arial", "Times", "serif";
+    font-family: 'Lora', Arial, Times, serif;
     color: #707070;
     font-size: 1.5em;
 }
 
+
+
+
+/* style for cookie statement */
+.alert {
+	font-family: 'Lora', Arial, Times, serif;
+	z-index: 4;
+    padding: 20px;
+    background-color: #2699FB; 
+    color: #F5F5F5;
+    margin-bottom: 15px;
+	font-size: 15px;
+	text-align: center;
+}
+
+.closebtn {
+	font-family: 'Lora', Arial, Times, serif;
+	margin-left: 15px;
+	color: #FFFFFF;
+	font-weight: bold;
+	float: right;
+	font-size: 25px;
+	line-height: 20px;
+	cursor: pointer;
+	transition: 0.3s;
+}
+
+.closebtn:hover {
+	color: black;
+}
+
+
+
+
+/* footer style */
 .footer {
 	position: absolute;	
-	font-family: 'Lora', "Arial", "Times", "serif";
+	font-family: 'Lora', Arial, Times, serif;
     background-color: #AAAAAA;
-    color: #FFFFFF;
+    color: #000000;
 	width: 100%;
-    font-size: 25px;
+    font-size: 15px;
     text-align: center;
     overflow: hidden;
     padding-top: 5px;
